@@ -4,6 +4,7 @@ import me.roinujnosde.titansbattle.TitansBattle;
 import me.roinujnosde.titansbattle.dao.ConfigurationDao;
 import me.roinujnosde.titansbattle.games.Game;
 import me.roinujnosde.titansbattle.types.GameConfiguration;
+import me.roinujnosde.titansbattle.types.Group;
 import me.roinujnosde.titansbattle.types.Warrior;
 import me.roinujnosde.titansbattle.types.Winners;
 import org.bukkit.Bukkit;
@@ -12,12 +13,18 @@ import org.bukkit.configuration.file.FileConfiguration;
 import org.bukkit.entity.Entity;
 import org.bukkit.entity.Player;
 import org.bukkit.entity.Projectile;
-import org.bukkit.projectiles.ProjectileSource;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import java.util.*;
-import java.util.stream.Collectors;
+import java.time.Duration;
+import java.util.ArrayList;
+import java.util.Calendar;
+import java.util.Collection;
+import java.util.Date;
+import java.util.List;
+import java.util.Map;
+import java.util.TreeMap;
+import java.util.UUID;
 
 public class Helper {
 
@@ -27,22 +34,22 @@ public class Helper {
     }
 
     @Nullable
-    public static GameConfiguration getGameConfigurationFromWinnerOrKiller(@Nullable Player player) {
+    public static GameConfiguration getGameConfigurationFromWinnerOrKiller(@Nullable final Player player) {
         if (player == null) {
             return null;
         }
         final UUID uniqueId = player.getUniqueId();
-        ConfigurationDao dao = plugin.getConfigurationDao();
-        for (GameConfiguration game : dao.getConfigurations(GameConfiguration.class)) {
-            String gameName = game.getName();
-            Winners w = plugin.getDatabaseManager().getLatestWinners();
+        final ConfigurationDao dao = plugin.getConfigurationDao();
+        for (final GameConfiguration game : dao.getConfigurations(GameConfiguration.class)) {
+            final String gameName = game.getName();
+            final Winners w = plugin.getDatabaseManager().getLatestWinners();
             if (w.getKiller(gameName) == null) {
                 continue;
             }
             if (w.getKiller(gameName).equals(uniqueId)) {
                 return game;
             }
-            List<UUID> playerWinners = w.getPlayerWinners(gameName);
+            final List<UUID> playerWinners = w.getPlayerWinners(gameName);
             if (playerWinners == null) {
                 continue;
             }
@@ -54,11 +61,11 @@ public class Helper {
     }
 
     @Nullable
-    public static FileConfiguration getConfigFromWinnerOrKiller(Player player) {
+    public static FileConfiguration getConfigFromWinnerOrKiller(final Player player) {
         if (player == null) {
             return null;
         }
-        GameConfiguration gameConfig = getGameConfigurationFromWinnerOrKiller(player);
+        final GameConfiguration gameConfig = getGameConfigurationFromWinnerOrKiller(player);
         if (gameConfig != null) {
             return gameConfig.getFileConfiguration();
         }
@@ -71,10 +78,10 @@ public class Helper {
      * @param player the player
      * @return true if he is a Winner
      */
-    public static boolean isWinner(Player player) {
-        ConfigurationDao dao = plugin.getConfigurationDao();
-        for (GameConfiguration game : dao.getConfigurations(GameConfiguration.class)) {
-            List<UUID> winners = plugin.getDatabaseManager().getLatestWinners().getPlayerWinners(game.getName());
+    public static boolean isWinner(final Player player) {
+        final ConfigurationDao dao = plugin.getConfigurationDao();
+        for (final GameConfiguration game : dao.getConfigurations(GameConfiguration.class)) {
+            final List<UUID> winners = plugin.getDatabaseManager().getLatestWinners().getPlayerWinners(game.getName());
             if (winners == null) {
                 continue;
             }
@@ -91,11 +98,11 @@ public class Helper {
      * @param player the player
      * @return true if he is a Winner
      */
-    public static boolean isKiller(Player player) {
-        ConfigurationDao dao = plugin.getConfigurationDao();
-        for (GameConfiguration game : dao.getConfigurations(GameConfiguration.class)) {
-            Winners latestWinners = plugin.getDatabaseManager().getLatestWinners();
-            UUID killer = latestWinners.getKiller(game.getName());
+    public static boolean isKiller(final Player player) {
+        final ConfigurationDao dao = plugin.getConfigurationDao();
+        for (final GameConfiguration game : dao.getConfigurations(GameConfiguration.class)) {
+            final Winners latestWinners = plugin.getDatabaseManager().getLatestWinners();
+            final UUID killer = latestWinners.getKiller(game.getName());
             if (killer == null) {
                 continue;
             }
@@ -112,12 +119,12 @@ public class Helper {
      * @param player the killer
      * @return true if it is priority
      */
-    public static boolean isKillerPriority(Player player) {
+    public static boolean isKillerPriority(final Player player) {
         if (isKiller(player)) {
-            ConfigurationDao dao = plugin.getConfigurationDao();
-            for (GameConfiguration game : dao.getConfigurations(GameConfiguration.class)) {
-                Winners latestWinners = plugin.getDatabaseManager().getLatestWinners();
-                UUID killer = latestWinners.getKiller(game.getName());
+            final ConfigurationDao dao = plugin.getConfigurationDao();
+            for (final GameConfiguration game : dao.getConfigurations(GameConfiguration.class)) {
+                final Winners latestWinners = plugin.getDatabaseManager().getLatestWinners();
+                final UUID killer = latestWinners.getKiller(game.getName());
                 if (killer == null) {
                     continue;
                 }
@@ -135,12 +142,12 @@ public class Helper {
      * @param player the killer
      * @return if it is enabled
      */
-    public static boolean isKillerJoinMessageEnabled(Player player) {
+    public static boolean isKillerJoinMessageEnabled(final Player player) {
         if (isKiller(player)) {
-            ConfigurationDao dao = plugin.getConfigurationDao();
-            for (GameConfiguration game : dao.getConfigurations(GameConfiguration.class)) {
-                Winners latestWinners = plugin.getDatabaseManager().getLatestWinners();
-                UUID killer = latestWinners.getKiller(game.getName());
+            final ConfigurationDao dao = plugin.getConfigurationDao();
+            for (final GameConfiguration game : dao.getConfigurations(GameConfiguration.class)) {
+                final Winners latestWinners = plugin.getDatabaseManager().getLatestWinners();
+                final UUID killer = latestWinners.getKiller(game.getName());
                 if (killer == null) {
                     continue;
                 }
@@ -158,12 +165,12 @@ public class Helper {
      * @param player the killer
      * @return if it is enabled
      */
-    public static boolean isKillerQuitMessageEnabled(Player player) {
+    public static boolean isKillerQuitMessageEnabled(final Player player) {
         if (isKiller(player)) {
-            ConfigurationDao dao = plugin.getConfigurationDao();
-            for (GameConfiguration game : dao.getConfigurations(GameConfiguration.class)) {
-                Winners latestWinners = plugin.getDatabaseManager().getLatestWinners();
-                UUID killer = latestWinners.getKiller(game.getName());
+            final ConfigurationDao dao = plugin.getConfigurationDao();
+            for (final GameConfiguration game : dao.getConfigurations(GameConfiguration.class)) {
+                final Winners latestWinners = plugin.getDatabaseManager().getLatestWinners();
+                final UUID killer = latestWinners.getKiller(game.getName());
                 if (killer == null) {
                     continue;
                 }
@@ -176,8 +183,8 @@ public class Helper {
     }
 
     @NotNull
-    public static List<UUID> warriorListToUuidList(@NotNull List<Warrior> players) {
-        return players.stream().map(Warrior::getUniqueId).collect(Collectors.toList());
+    public static List<UUID> warriorListToUuidList(@NotNull final List<Warrior> players) {
+        return players.stream().map(Warrior::getUniqueId).toList();
     }
 
     /**
@@ -186,9 +193,9 @@ public class Helper {
      * @param list the String list
      * @return the UUID list
      */
-    public static List<UUID> stringListToUuidList(List<String> list) {
-        List<UUID> uuidList = new ArrayList<>();
-        for (String uuid : list) {
+    public static List<UUID> stringListToUuidList(final List<String> list) {
+        final List<UUID> uuidList = new ArrayList<>();
+        for (final String uuid : list) {
             uuidList.add(UUID.fromString(uuid));
         }
         return uuidList;
@@ -201,13 +208,13 @@ public class Helper {
      * @param list the UUID list
      * @return the String list
      */
-    public static List<String> uuidListToPlayerNameList(List<UUID> list) {
+    public static List<String> uuidListToPlayerNameList(final List<UUID> list) {
         if (list == null) {
             return null;
         }
-        List<String> playerNameList = new ArrayList<>();
-        for (UUID uuid : list) {
-            OfflinePlayer offlinePlayer = Bukkit.getOfflinePlayer(uuid);
+        final List<String> playerNameList = new ArrayList<>();
+        for (final UUID uuid : list) {
+            final OfflinePlayer offlinePlayer = Bukkit.getOfflinePlayer(uuid);
             if (offlinePlayer.getName() != null) {
                 playerNameList.add(offlinePlayer.getName());
             }
@@ -221,9 +228,9 @@ public class Helper {
      * @param list the UUID list
      * @return the String list
      */
-    public static List<String> uuidListToStringList(List<UUID> list) {
-        List<String> stringList = new ArrayList<>();
-        for (UUID uuid : list) {
+    public static List<String> uuidListToStringList(final List<UUID> list) {
+        final List<String> stringList = new ArrayList<>();
+        for (final UUID uuid : list) {
             stringList.add(uuid.toString());
         }
         return stringList;
@@ -235,12 +242,12 @@ public class Helper {
      * @param player the winner
      * @return if it is enabled
      */
-    public static boolean isWinnerJoinMessageEnabled(Player player) {
+    public static boolean isWinnerJoinMessageEnabled(final Player player) {
         if (isKiller(player)) {
-            ConfigurationDao dao = plugin.getConfigurationDao();
-            for (GameConfiguration game : dao.getConfigurations(GameConfiguration.class)) {
-                Winners latestWinners = plugin.getDatabaseManager().getLatestWinners();
-                List<UUID> playerWinners = latestWinners.getPlayerWinners(game.getName());
+            final ConfigurationDao dao = plugin.getConfigurationDao();
+            for (final GameConfiguration game : dao.getConfigurations(GameConfiguration.class)) {
+                final Winners latestWinners = plugin.getDatabaseManager().getLatestWinners();
+                final List<UUID> playerWinners = latestWinners.getPlayerWinners(game.getName());
                 if (playerWinners == null) {
                     continue;
                 }
@@ -258,12 +265,12 @@ public class Helper {
      * @param player the winner
      * @return if it is enabled
      */
-    public static boolean isWinnerQuitMessageEnabled(Player player) {
+    public static boolean isWinnerQuitMessageEnabled(final Player player) {
         if (isWinner(player)) {
-            ConfigurationDao dao = plugin.getConfigurationDao();
-            for (GameConfiguration game : dao.getConfigurations(GameConfiguration.class)) {
-                Winners latestWinners = plugin.getDatabaseManager().getLatestWinners();
-                List<UUID> playerWinners = latestWinners.getPlayerWinners(game.getName());
+            final ConfigurationDao dao = plugin.getConfigurationDao();
+            for (final GameConfiguration game : dao.getConfigurations(GameConfiguration.class)) {
+                final Winners latestWinners = plugin.getDatabaseManager().getLatestWinners();
+                final List<UUID> playerWinners = latestWinners.getPlayerWinners(game.getName());
                 if (playerWinners == null) {
                     continue;
                 }
@@ -281,18 +288,13 @@ public class Helper {
      * @param entity the entity to investigate
      * @return the attacker/killer or null
      */
-    public static @Nullable Player getPlayerAttackerOrKiller(Entity entity) {
-        Player investigated = null;
-        if (entity instanceof Player) {
-            investigated = (Player) entity;
+    public static @Nullable Player getPlayerAttackerOrKiller(final Entity entity) {
+        if (entity instanceof final Player damager) {
+            return damager;
+        } else if (entity instanceof final Projectile projectile && projectile.getShooter() instanceof final Player shooter) {
+            return shooter;
         }
-        if (entity instanceof Projectile) {
-            ProjectileSource shooter = ((Projectile) entity).getShooter();
-            if (shooter instanceof Player) {
-                investigated = (Player) shooter;
-            }
-        }
-        return investigated;
+        return null;
     }
 
     /**
@@ -302,16 +304,16 @@ public class Helper {
      * @param collection the String collection
      * @return the String representation
      */
-    public static @NotNull String buildStringFrom(@NotNull Collection<String> collection) {
-        StringBuilder sb = new StringBuilder();
-        List<String> list = new ArrayList<>(collection);
-        for (String s : list) {
-            Game currentGame = plugin.getGameManager().getCurrentGame().orElse(null);
-            String listColor = plugin.getLang("list-color", currentGame);
+    public static @NotNull String buildStringFrom(@NotNull final Collection<String> collection) {
+        final StringBuilder sb = new StringBuilder();
+        final List<String> list = new ArrayList<>(collection);
+        for (final String s : list) {
+            final Game currentGame = plugin.getGameManager().getCurrentGame().orElse(null);
+            final String listColor = plugin.getLang("list-color", currentGame);
             sb.append(listColor);
-            if (s.equalsIgnoreCase(list.get(0))) {
+            if (s.equalsIgnoreCase(list.getFirst())) {
                 sb.append(s);
-            } else if (s.equals(list.get(list.size() - 1))) {
+            } else if (s.equals(list.getLast())) {
                 sb.append(" & ");
                 sb.append(s);
             } else {
@@ -322,18 +324,25 @@ public class Helper {
         return sb.toString();
     }
 
+    public static @NotNull String buildStringFrom(@NotNull final Map<Group, Integer> groupIntegerMap) {
+        final StringBuilder sb = new StringBuilder();
+        for (final Map.Entry<Group, Integer> entry : groupIntegerMap.entrySet()) {
+            sb.append(entry.getKey().getId().toUpperCase())
+                    .append("(")
+                    .append(entry.getValue())
+                    .append(") ");
+        }
+        return sb.toString();
+    }
+
     /**
      * Gets a String filled with the specified quantity of spaces
      *
      * @param spaces the spaces
      * @return the spaces filled String
      */
-    public static String getSpaces(int spaces) {
-        StringBuilder s = new StringBuilder();
-        for (int i = 0; i < spaces; i++) {
-            s.append(" ");
-        }
-        return s.toString();
+    public static String getSpaces(final int spaces) {
+        return " ".repeat(Math.max(0, spaces));
     }
 
     /**
@@ -342,7 +351,7 @@ public class Helper {
      * @param integer the number
      * @return the length
      */
-    public static int getLength(int integer) {
+    public static int getLength(final int integer) {
         return String.valueOf(integer).length();
     }
 
@@ -353,15 +362,15 @@ public class Helper {
      * @param date2 date 2
      * @return true if they are equals
      */
-    public static boolean equalDates(Date date1, Date date2) {
-        Calendar d1 = Calendar.getInstance();
+    public static boolean equalDates(final Date date1, final Date date2) {
+        final Calendar d1 = Calendar.getInstance();
         d1.setTime(date1);
-        Calendar d2 = Calendar.getInstance();
+        final Calendar d2 = Calendar.getInstance();
         d2.setTime(date2);
 
-        boolean sameYear = d1.get(Calendar.YEAR) == d2.get(Calendar.YEAR);
-        boolean sameMonth = d1.get(Calendar.MONTH) == d2.get(Calendar.MONTH);
-        boolean sameDay = d1.get(Calendar.DAY_OF_MONTH) == d2.get(Calendar.DAY_OF_MONTH);
+        final boolean sameYear = d1.get(Calendar.YEAR) == d2.get(Calendar.YEAR);
+        final boolean sameMonth = d1.get(Calendar.MONTH) == d2.get(Calendar.MONTH);
+        final boolean sameDay = d1.get(Calendar.DAY_OF_MONTH) == d2.get(Calendar.DAY_OF_MONTH);
         return sameDay && sameMonth && sameYear;
     }
 
@@ -369,11 +378,67 @@ public class Helper {
         return caseInsensitiveMap(null);
     }
 
-    public static <V> @NotNull Map<String, V> caseInsensitiveMap(@Nullable Map<String, V> map) {
-        TreeMap<String, V> treeMap = new TreeMap<>(String.CASE_INSENSITIVE_ORDER);
+    public static <V> @NotNull Map<String, V> caseInsensitiveMap(@Nullable final Map<String, V> map) {
+        final TreeMap<String, V> treeMap = new TreeMap<>(String.CASE_INSENSITIVE_ORDER);
         if (map != null) {
             treeMap.putAll(map);
         }
         return treeMap;
+    }
+
+    /**
+     * Formats a duration (in seconds) into a human-readable string using a custom pattern.
+     * <p>
+     * This method is intended for static timers such as:
+     * <ul>
+     *   <li>Event duration</li>
+     *   <li>Elapsed time</li>
+     *   <li>Remaining time until an event ends</li>
+     * </ul>
+     * <p>
+     * It does <b>not</b> represent a time of day. The formatting is based on a total duration
+     * and supports values greater than 24 hours without wrapping.
+     * <p>
+     * If {@code totalSeconds} is less than {@code 0}, the method returns {@code "N/A"}.
+     *
+     * <h3>Supported format tokens</h3>
+     * <ul>
+     *   <li><b>{dd}</b> – Days (2 digits, zero-padded)</li>
+     *   <li><b>{HH}</b> – Total hours (zero-padded, can exceed 24)</li>
+     *   <li><b>{hh}</b> – Hour part within the current day (00–23)</li>
+     *   <li><b>{mm}</b> – Minute part within the current hour (00–59)</li>
+     *   <li><b>{ss}</b> – Second part within the current minute (00–59)</li>
+     *   <li><b>{m}</b> – Total minutes (no padding)</li>
+     *   <li><b>{s}</b> – Total seconds (no padding)</li>
+     * </ul>
+     *
+     * @param totalSeconds the total duration in seconds
+     * @param pattern the format pattern using the supported tokens
+     * @return the formatted duration string, or {@code "N/A"} if {@code totalSeconds < 0}
+     */
+    public static @NotNull String formatTime(final long totalSeconds, final String pattern) {
+        if (totalSeconds < 0) {
+            return "N/A";
+        }
+
+        final Duration d = Duration.ofSeconds(totalSeconds);
+
+        final long days = d.toDays();
+        final long hours = d.toHours();      // total hours
+        final long minutes = d.toMinutes();  // total minutes
+        final long seconds = d.getSeconds(); // total seconds
+
+        final long hPart = (seconds % 86_400) / 3_600;
+        final long mPart = (seconds % 3_600) / 60;
+        final long sPart = seconds % 60;
+
+        return pattern
+                .replace("{dd}", String.format("%02d", days))
+                .replace("{HH}", String.format("%02d", hours))
+                .replace("{hh}", String.format("%02d", hPart))
+                .replace("{mm}", String.format("%02d", mPart))
+                .replace("{ss}", String.format("%02d", sPart))
+                .replace("{m}", Long.toString(minutes))
+                .replace("{s}", Long.toString(seconds));
     }
 }
